--- a/assets/static/main.css
+++ b/assets/static/main.css
@@ -22,6 +22,7 @@ body {
       --cendyne-eyes: #4cabc7;
       --cendyne-eyes-light: #66D9EF;
       --ignorable-color: #8C8C8C;
+      --cendyne-hide-half: rgba(46, 30, 23, 0.8);
       background: var(--cendyne-hide);
       color: var(--cendyne-belly);
   }
@@ -44,6 +45,7 @@ body {
       --cendyne-trim: black;
       --cendyne-eyes: black;
       --cendyne-eyes-light: black;
+      --cendyne-hide-half: black;
       --ignorable-color: #8C8C8C;
   }
   video::-webkit-media-controls {
@@ -465,4 +467,79 @@ p:first-child, .mendoza-codeblock:first-child, iframe:first-child, ul:first-chil
   color: var(--cendyne-trim);
   margin-bottom: 2pt;
   font-weight: bold;
+}
+.card {
+  background-color: var(--cendyne-hide-dark);
+  border-radius: 0.375rem;
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+.card-header-bg {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  border-radius: 0.375rem 0.375rem 0 0;
+  margin-bottom: 0.5rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.card-header {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+}
+.card-content {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+.card-icon {
+  flex-shrink: 0;
+  max-height: 64px;
+}
+.card-icon-image {
+  max-height: 64px;
+  max-width: 64px;
+  border-radius: 0.375rem 0 0 0.375rem;
+}
+.card-header-content {
+  overflow-wrap: break-word;
+  overflow: hidden;
+  border-radius: 0 0.375rem 0.375rem 0;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+}
+.card-header-bg[data-background] .card-header-content {
+  background-color: var(--cendyne-hide-half);
+}
+.card-header-name {
+  font-weight: bold;
+}
+.card-footer {
+  margin-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+a.fediverse-link {
+  text-decoration: none;
+  color: inherit;
+}
+.fediverse-username {
+  color: var(--cendyne-belly);
+}
+.fediverse-instance {
+  color: var(--ignorable-color);
+}
+.inline-flex {
+  display: inline-flex;
+}
+.custom-emoji {
+  max-height: 16px;
+  max-width: 16px;
 }
