--- a/assets/static/main.css
+++ b/assets/static/main.css
@@ -480,10 +480,12 @@ p:first-child, .mendoza-codeblock:first-child, iframe:first-child, ul:first-chil
   padding-left: 1.25rem;
   padding-right: 1.25rem;
   border-radius: 0.375rem 0.375rem 0 0;
-  margin-bottom: 0.5rem;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  display: flex;
+  justify-content: space-between;
+  gap: 0.5rem;
 }
 .card-header {
   display: flex;
@@ -491,17 +493,23 @@ p:first-child, .mendoza-codeblock:first-child, iframe:first-child, ul:first-chil
   align-items: stretch;
 }
 .card-content {
+  margin-top: 0.5rem;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
 .card-icon {
   flex-shrink: 0;
   max-height: 64px;
+  max-width: 64px;
 }
 .card-icon-image {
   max-height: 64px;
   max-width: 64px;
   border-radius: 0.375rem 0 0 0.375rem;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 .card-header-content {
   overflow-wrap: break-word;
@@ -526,7 +534,7 @@ p:first-child, .mendoza-codeblock:first-child, iframe:first-child, ul:first-chil
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
-a.fediverse-link {
+a.fediverse-link, a.card-header-link {
   text-decoration: none;
   color: inherit;
 }
@@ -542,4 +550,17 @@ a.fediverse-link {
 .custom-emoji {
   max-height: 16px;
   max-width: 16px;
+}
+.card-video {
+  width: 100%;
+  object-fit: cover;
+}
+.flex-shrink {
+  flex-shrink: 100;
+}
+.flex-grow {
+  flex-grow: 1;
+}
+.all-rounded {
+  border-radius: 0.375rem;
 }
